examples/bench/bad/typing/env3.mlw

(* a reference cannot be used within a predicate definition *)

parameter x : int ref

predicate p(y : int) = x+y>=0
